# klip

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  imgui.ini
include/: async_mp4_writer.h  capture_manager.h  clip_app.h  encoder_backend.h  hotkey_manager.h  lockfree_queues.h  replay_ring_buffer.h
packaging/: ClippingSetup.iss
src/: async_mp4_writer.cpp  capture_manager.cpp  clip_app.cpp  encoder_backend.cpp  hotkey_manager.cpp  main.cpp  replay_ring_buffer.cpp
